--- a/MaxText/configs/base.yml
+++ b/MaxText/configs/base.yml
@@ -265,7 +265,7 @@ logical_axis_rules: [
                       ['activation_length', ['sequence', 'context']],
                       ['activation_length', ['context']],
                       ['activation_length_q', ['context']],
-                      ['activation_kv_length', []],
+                      ['activation_length_kv', []],
                       ['activation_embed', ['tensor', 'tensor_transpose']],
                       ['activation_mlp', ['tensor', 'tensor_transpose', 'tensor_sequence']],
                       ['activation_kv', ['tensor', 'tensor_transpose', 'tensor_sequence']],
