Updating checkpoint conversion scripts to convert LoRA weights to JAX format. Saving those weights using abstract state corresponding the LoRA which is derived from the abstract state of the base model. Apply the LoRA weights on the base weights while loading the parameters to create new updated base weights for answering Inference requests.

--- a/MaxText/configs/base.yml
+++ b/MaxText/configs/base.yml
@@ -34,6 +34,7 @@ load_parameters_path: ""
 
 # LoRA parameters path
 lora_parameters_base_path: ""
+lora_config_path: ""
 
 # Loads a full checkpoint including optimizer state and step count from a specific directory
 # e.g. gs://my-base-output-directory/my-previous-run-name/checkpoints/items/NUMBER or NUMBER/items
