Maxtext unit tests with Pathways backend.
Modified Pathways workflow to run specifically on Pathways runner.

Final tests on Pathways.

New changes to help run tests.

Trial to get Pathways working.

run Pathways containers and Maxtext as part of the same job.

Move installation to script

More changes.

Installing docker also as part of the script.

Simplified flow test.

Few more changes.

New way of installation

Docker compose with Maxtext and Pathways containers.

Other changes to use maxtext container in docker compose YAML.

Trying to merge all services together.

Adding everything as services again.

Directly running docker compose.

Elegant solution with Pathways containers as services.

Elegant solution with Pathways containers as services.

Reverting to Maxtext in docker compose.

Changes to run with latest JAX SS image.

Run tests with correct markers.

Move installation to Github runner step, simplify command.

Formalize the changes.

Formalize the changes.

Formalize the changes.

Notify on Pathways test failures, modify test script.

Error handling.

--- a/.github/workflows/RunTests.yml
+++ b/.github/workflows/RunTests.yml
@@ -67,6 +67,15 @@ jobs:
       tf_force_gpu_allow_growth: false
       container_resource_option: "--privileged"
 
+  tpu_pathways_unit_tests:
+    needs: [tpu_image]
+    uses: ./.github/workflows/run_pathways_tests_internal.yml
+    with:
+      device_type: tpu
+      device_name: v4-8
+      pytest_marker: 'not gpu_only and not integration_test'
+      test_directory: 'tests'
+
   tpu_integration_tests:
     needs: tpu_image
     uses: ./.github/workflows/run_tests_internal.yml
@@ -105,7 +114,7 @@ jobs:
 
   clean_up:
     if: ${{ always() }}  # always execute, regardless of previous jobs or steps.
-    needs: [gpu_unit_tests, gpu_integration_tests, tpu_unit_tests, tpu_integration_tests]
+    needs: [gpu_unit_tests, gpu_integration_tests, tpu_unit_tests, tpu_pathways_unit_tests, tpu_integration_tests]
     name: "Clean up"
     runs-on: ["self-hosted"]
     permissions:
@@ -119,7 +128,7 @@ jobs:
 
   notify:
     name: Notify failed build # creates an issue or modifies last open existing issue for failed build
-    needs: [gpu_unit_tests, gpu_integration_tests, tpu_unit_tests, tpu_integration_tests]
+    needs: [gpu_unit_tests, gpu_integration_tests, tpu_unit_tests, tpu_pathways_unit_tests, tpu_integration_tests]
     runs-on: ["self-hosted"]
     steps:
     - name: Check whether one of the jobs failed
