1) Added load_adapter method to just load the single adapter and a separate apply_adapter method. 2) Support loading of adapters from a catalog file if its path is defined in the maxengine_server config. Added the corresponding key in the base.yaml. 3) Added method to check RAM stats. This is required for LoRA when these are being loaded into RAM.

--- a/MaxText/configs/base.yml
+++ b/MaxText/configs/base.yml
@@ -32,6 +32,9 @@ normalization_layer_epsilon: 1.e-05
 # e.g. gs://my-base-output-directory/my-previous-run-name/checkpoints/items/NUMBER or NUMBER/items
 load_parameters_path: ""
 
+# Load adapters like LoRA from a catalog file at a given path
+adapters_catalog_file_path: ""
+
 # LoRA parameters path
 lora_parameters_base_path: ""
 lora_config_path: ""
