--- a/MaxText/configs/base.yml
+++ b/MaxText/configs/base.yml
@@ -337,17 +337,24 @@ add_bos: True
 add_eos: True
 
 # Dataset
-per_device_batch_size: 12.0
+per_device_batch_size: 1.0
 expansion_factor_real_data: -1 # if -1 then all hosts will load real data, else total_hosts//expansion_factor_real_data will pull data from GCS.
 eval_per_device_batch_size: 0.0
 max_corpus_chars: 10_000_000
 train_data_columns: ['text'] # for DPO dataset containing "chosen" and "rejected"
+# train_data_columns: ['messages'] # for HuggingFaceH4/ultrachat_200k
+# train_data_columns: ['prompt', 'completion'] # for trl-lib/ultrafeedback-gpt-3.5-turbo-helpfulness
 eval_data_columns: ['text'] # for DPO dataset containing "chosen" and "rejected"
+packing: True
 
 # direct preference optimization (DPO)
 use_dpo: False
 dpo_label_smoothing: 0.0
 dpo_beta: 0.1
+
+# SFT
+use_sft: False
+sft_train_on_completion: False
 
 # dataset_type must be synthetic, hf, grain, tfds
 # details in: https://github.com/google/maxtext/blob/main/getting_started/Data_Input_Pipeline.md
@@ -356,9 +363,12 @@ dataset_type: tfds
 dataset_path: "" # your path given as argument in download_dataset.sh, e.g. "gs://my-maxtext-dataset/"
 dataset_name: 'c4/en:3.0.1'
 eval_dataset_name: 'c4/en:3.0.1'
+# train_split: 'train'  # used for trl-lib/ultrafeedback-gpt-3.5-turbo-helpfulness dataset
+train_split: 'train_sft' # used for HuggingFaceH4/ultrachat_200k
 eval_split: 'validation'
 # for HuggingFace input pipeline (dataset_type=hf)
-hf_path: ''
+# hf_path: 'trl-lib/ultrafeedback-gpt-3.5-turbo-helpfulness'
+hf_path: 'HuggingFaceH4/ultrachat_200k'
 hf_data_dir: ''
 hf_train_files: ''
 hf_eval_split: ''
