Added a flag enable_llm_inference_pool to base.yml. It will be used to launch the JetStream server explicitly for llm_inference_gateway while supporting multi-LoRA inferencing with integration APIs aligned with the inference_gateway requirements.

--- a/MaxText/configs/base.yml
+++ b/MaxText/configs/base.yml
@@ -486,6 +486,7 @@ inference_metadata_file: "" # path to a json file
 inference_server: "MaxtextInterleavedServer"  # inference server to start
 inference_benchmark_test: False
 enable_model_warmup: False
+enable_llm_inference_pool: False
 
 # Stack prefill cache across the layer to reduce the
 # Python layer latency.
