--- a/MaxText/experimental/rl/grpo.yml
+++ b/MaxText/experimental/rl/grpo.yml
@@ -6,28 +6,27 @@ tokenizer_path: 'google/gemma-2-2b-it'
 model_name: gemma2-2b 
 
 per_device_batch_size: 1.0
-learning_rate: 1.e-6
+learning_rate: 1.e-6 # from TRL
 
 enable_goodput_recording: False
 monitor_goodput: False
 dataset_type: hf 
 hf_path: 'json' 
 hf_data_dir: '' 
-run_name: ${USER}-$(date +%Y-%m-%d-%H-%M) 
 
 #prefixed TRL
 # max_prefill_predict_length: 550
 # max_target_length: 678 #
 max_prefill_predict_length: 512
-max_target_length: 1024
+max_target_length: 768
 hf_train_files: 'gs://mazumdera-test-bucket-europe-west4/rl-datasets/prefixed_tldr_dataset.jsonl' 
 
 #TRL
+# # max_prefill_predict_length: 512
+# # max_target_length: 768 # from TRL
 # max_prefill_predict_length: 512
-# max_target_length: 768 # from TRL
-max_prefill_predict_length: 512
-max_target_length: 1024
-# hf_train_files: 'gs://mazumdera-test-bucket-europe-west4/rl-datasets/tldr_dataset.jsonl' 
+# max_target_length: 1024
+# # hf_train_files: 'gs://mazumdera-test-bucket-europe-west4/rl-datasets/tldr_dataset.jsonl' 
 
 
 adam_b2: 0.999
@@ -39,9 +38,7 @@ num_generations: 4 # TRL is 8
 temperature: 0.9 #from TRL
 grpo_beta: 20 #100 # 0.04 #from TRL
 
-learning_rate: 1.e-6 # from TRL
 decode_sampling_strategy: "weighted"
-per_device_batch_size: 1
 async_checkpointing: false
 
 ### Splash attention block sizes
