--- a/MaxText/configs/base.yml
+++ b/MaxText/configs/base.yml
@@ -289,9 +289,9 @@ logical_axis_rules: [
                       ['embed', ['fsdp', 'sequence', 'expert']],
                       ['embed_no_exp', ['fsdp', 'fsdp_transpose', 'sequence', 'tensor_transpose', 'context']],
                       ['embed_no_exp', ['fsdp', 'sequence', 'tensor_transpose', 'context']],
-                      ['norm', ['tensor', ''tensor_transpose', 'tensor_sequence']],
-                      ['q_heads', ['tensor', 'tensor_sequence', 'autoregressive']],
-                      ['heads', ['tensor', 'tensor_sequence', 'autoregressive']],
+                      ['embed_no_exp', ['fsdp', 'fsdp_transpose', 'sequence']],
+                      ['embed_no_exp', ['fsdp', 'sequence']],
+                      ['norm', ['tensor', 'tensor_transpose', 'tensor_sequence']],
                       ['layers', 'stage'],
                       ['kv', []],
                       ['kv_head_dim', []],
