[Inference PagedAttention] Add configs for paged attention and allow attention=paged (0/N)
This change is based on a branch from Pate and Rupeng.

Impact of the change:
* This change is currently a noop. The new configurations are not yet utilized
  within the codebase.

Major changes:
* MaxText/configs/base.yml: Add configs to be used by paged attention
* MaxText/pyconfig.py: Update the validation to allow setting attention to 'paged'

Reason:
* This change prepares the codebase for paged attention, which will be used to
  improve inference performance. This PR is one of a series of changes that will
  gradually introduce paged attention functionality

--- a/MaxText/configs/base.yml
+++ b/MaxText/configs/base.yml
@@ -590,3 +590,11 @@ sa_use_fused_bwd_kernel: False
 sa_q_layout: "HEAD_DIM_MINOR"
 sa_k_layout: "HEAD_DIM_MINOR"
 sa_v_layout: "HEAD_DIM_MINOR"
+
+#######################
+### Paged Attention ###
+#######################
+# These settings take effect only when `attention=paged`.
+pagedattn_num_pages: 64
+pagedattn_tokens_per_page: 32
+pagedattn_pages_per_compute_block: 8
